# Online_Shop

./: pyproject.toml
config/: settings.py
products/: admin.py  models.py
