[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = "Online 3D Printing Store"
authors = ["Sergey Zaprudnov <szaprudnov@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
