[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = "Online 3D Printing Store"
authors = ["Sergey Zaprudnov <szaprudnov@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.4"
pillow = "^11.3.0"
environs = "^14.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
